<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="category_formatting"
        app:title="@string/prefs_title_formatting">

        <ListPreference
            app:key="pref_number_decimals"
            app:title="@string/prefs_title_number_decimals"
            app:summary="@string/prefs_summary_number_decimals"
            app:defaultValue="@string/default_number_decimals"
            app:entries="@array/number_decimals"
            app:entryValues="@array/number_decimals"/>

        <ListPreference
            app:key="pref_group_separator"
            app:title="@string/prefs_title_group_separator"
            app:summary="@string/prefs_summary_group_separator"
            app:defaultValue="@string/default_group_separator"
            app:entries="@array/group_separators"
            app:entryValues="@array/group_separators"/>

        <ListPreference
            app:key="pref_decimal_separator"
            app:title="@string/prefs_title_decimal_separator"
            app:summary="@string/prefs_summary_decimal_separator"
            app:defaultValue="@string/default_decimal_separator"
            app:entries="@array/decimal_separators"
            app:entryValues="@array/decimal_separators"/>

    </PreferenceCategory>

</PreferenceScreen>